syntax = "proto3";

package post_service;

service PostService {
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
    rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse);
    rpc RatePost(RatePostRequest) returns (Rate);
    rpc CommentPost(CommentPostRequest) returns (Comment);
}

message Post {
    string id = 1;
    string title = 2;
    string description = 3;
    string picture = 4;
    string channelId = 5;
}

message RepeatedPost {
    repeated string id = 1;
    repeated string title = 2;
    repeated string description = 3;
    repeated string picture = 4;
    repeated string channelId = 5;
}

message Rate {
    string id = 1;
    string postId = 2;
    string parentId = 3;
    string reaction = 4;
}

message CommentRate {
    string id = 1;
    string commentId = 2;
    string parentId = 3;
    string reaction = 4;
}

message Comment {
    string id = 1;
    string postId = 2;
    string parentId = 3;
    string text = 4;
}

message Boolean {
    bool bool = 1;
}

message CreatePostRequest {
    string title = 1;
    string description = 2;
    string picture = 3;
    string channelId = 4;
}

message DeletePostRequest {
    string id = 1;
    string channelId = 2;
}

message GetPostByIdRequest {
    string id = 1;
}

message GetPostByIdResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string picture = 4;
    string channelId = 5;
    repeated Comment postComments = 6;
    repeated Rate postLikes = 7;
}

message GetAllPostsRequest {
    string channelId = 1;
}

message GetAllPostsResponse {
    repeated Post posts = 1;
}

message RatePostRequest {
    string postId = 1;
    string parentId = 2;
    string rate = 3;
}

message CommentPostRequest {
    string postId = 1;
    string channelId = 2;
    string parentId = 3;
    string text = 4;
}